--- a/src/components/Usercard/usercard.scss
+++ b/src/components/Usercard/usercard.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 40rem;
-    height: 15rem;
+    height: auto;
     border-radius: 3px;
     background-color: rgba(0, 128, 0, 0.151);
     padding: 1rem;
